--- a/src/app/dvd-list/dvd/dvd.component.html
+++ b/src/app/dvd-list/dvd/dvd.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" >
         <img [src]="dvd.imgUrl" alt="Dvd image">
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9" style="border: 5px;">
         <h5>
             {{ dvd.title }}
             <span class="badge badge-success">{{ dvd.price }} $</span>
@@ -13,5 +13,7 @@
         </p>
         <p *ngIf="dvd.renter">renter: {{ dvd.renter.firstName }} {{ dvd.renter.lastName }}</p>
         <p>{{ dvd.date }}</p>
+        <p>{{ dvd.status }}</p>
+        <hr>
     </div>
 </div>
