--- a/src/app/dvd-list/dvd-list.component.html
+++ b/src/app/dvd-list/dvd-list.component.html
@@ -16,6 +16,8 @@
         </div>
     </div>
     <div class="col-md-4">
+        <h5>Kölcsönések</h5>
+        <app-shopping-cart></app-shopping-cart>
     </div>
 </div>
 
