--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,10 @@
-<p>shopping-cart works!</p>
+<div class="row">
+    <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-8" *ngFor="let dvd of dvds">
+                <app-cart-item [dvd]="dvd"></app-cart-item>
+            </div>
+        </div>
+    </div>
+</div>
+
