--- a/src/app/dvd-list/dvd-list.component.html
+++ b/src/app/dvd-list/dvd-list.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-md-4">
         <h5>Kölcsönések</h5>
-        <app-shopping-cart></app-shopping-cart>
+        <app-rent></app-rent>
     </div>
 </div>
 
