--- a/src/app/rent/rent.component.html
+++ b/src/app/rent/rent.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-8">
         <div class="row">
             <div class="col-md-8" *ngFor="let dvd of dvds">
-                <app-cart-item [dvd]="dvd"></app-cart-item>
+                <app-rent-item [dvd]="dvd"></app-rent-item>
             </div>
         </div>
     </div>
