--- a/src/app/rent/cart-item/rent-item.component.html
+++ b/src/app/rent/cart-item/rent-item.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-9" style="border: 5px;">
-        <p *ngIf="dvd.renter">renter: {{ dvd.renter.firstName }} {{ dvd.renter.lastName }}</p>
+        <p *ngIf="dvd.renter">renter: {{ dvd.renter.firstName }} {{ dvd.renter.lastName }} <span *ngIf="late">*</span></p>
         <p>movie: {{ dvd.title }}</p>
 
         <hr>
