--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
                 <a class="nav-link" routerLink="/">Lista</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" routerLink="/user-list">Users</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" routerLink="/dvd-form">Új DVD</a>
             </li>
             <li class="nav-item">
